.stack-work/logs/haskell-gi-base-0.21.5.log
Configuring haskell-gi-base-0.21.5...
Preprocessing library for haskell-gi-base-0.21.5..
Building library for haskell-gi-base-0.21.5..
[ 1 of 20] Compiling Data.GI.Base.CallStack ( Data/GI/Base/CallStack.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/CallStack.o )
[ 2 of 20] Compiling Data.GI.Base.GType ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GType.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GType.o )
[ 3 of 20] Compiling Data.GI.Base.BasicTypes ( Data/GI/Base/BasicTypes.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/BasicTypes.o )
[ 4 of 20] Compiling Data.GI.Base.GHashTable ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GHashTable.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GHashTable.o )
[ 5 of 20] Compiling Data.GI.Base.Overloading ( Data/GI/Base/Overloading.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Overloading.o )
[ 6 of 20] Compiling Data.GI.Base.Utils ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Utils.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Utils.o )
[ 7 of 20] Compiling Data.GI.Base.ManagedPtr ( Data/GI/Base/ManagedPtr.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/ManagedPtr.o )
[ 8 of 20] Compiling Data.GI.Base.GParamSpec ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GParamSpec.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GParamSpec.o )
[ 9 of 20] Compiling Data.GI.Base.Closure ( Data/GI/Base/Closure.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Closure.o )
[10 of 20] Compiling Data.GI.Base.BasicConversions ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/BasicConversions.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/BasicConversions.o )
[11 of 20] Compiling Data.GI.Base.GVariant ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GVariant.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GVariant.o )
[12 of 20] Compiling Data.GI.Base.GValue ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GValue.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GValue.o )
[13 of 20] Compiling Data.GI.Base.Properties ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Properties.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Properties.o )
[14 of 20] Compiling Data.GI.Base.Attributes ( Data/GI/Base/Attributes.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Attributes.o )
[15 of 20] Compiling Data.GI.Base.Signals ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Signals.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Signals.o )
[16 of 20] Compiling Data.GI.Base.GObject ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GObject.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GObject.o )
[17 of 20] Compiling Data.GI.Base.Constructible ( Data/GI/Base/Constructible.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/Constructible.o )
[18 of 20] Compiling Data.GI.Base.GError ( .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GError.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/GError.o )
[19 of 20] Compiling Data.GI.Base.ShortPrelude ( Data/GI/Base/ShortPrelude.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base/ShortPrelude.o )
[20 of 20] Compiling Data.GI.Base     ( Data/GI/Base.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Data/GI/Base.o )

[;1mc/hsgclosure.c:73:17: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: 'format' attribute argument not supported: gnu_printf [-Wignored-attributes][0m[0m
[;1m[34m   |[0m[0m
[;1m[34m73 |[0m[0m __attribute__ (([;1m[31mf[0m[0mormat (gnu_printf, 1, 2)))
[;1m[34m   |[0m[0m[;1m[31m                 ^[0m[0m
[0m[0m[0m__attribute__ ((format (gnu_printf, 1, 2)))
                ^
1 warning generated.

[;1mc/hsgclosure.c:73:17: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: 'format' attribute argument not supported: gnu_printf [-Wignored-attributes][0m[0m
[;1m[34m   |[0m[0m
[;1m[34m73 |[0m[0m __attribute__ (([;1m[31mf[0m[0mormat (gnu_printf, 1, 2)))
[;1m[34m   |[0m[0m[;1m[31m                 ^[0m[0m
[0m[0m[0m__attribute__ ((format (gnu_printf, 1, 2)))
                ^
1 warning generated.
Installing library in /Users/Vadim/.stack/snapshots/x86_64-osx/lts-13.12/8.6.4/lib/x86_64-osx-ghc-8.6.4/haskell-gi-base-0.21.5-B7L3HQFSPkOFeLcsLCK63O
Registering library for haskell-gi-base-0.21.5..
